--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -10,7 +10,7 @@
 
       <!-- logo -->
       <a class="navbar-brand" [routerLink]="['/']">
-        <img id="logo" src="./assets/img/logo.png" height="35px">
+        <img id="logo" src="./assets/img/gl_logo.png" height="35px">
       </a>
     </div>
 
