--- a/angular/src/app/views/task.detail.html
+++ b/angular/src/app/views/task.detail.html
@@ -1,6 +1,6 @@
 <div class="col-md-12">
 	
-	<div class="loader" *ngIf="loading == 'show'">
+	<div class="loader" *ngIf="loading === 'show'">
 		<img src="assets/img/loader.gif" />
 	</div>
 
